# burrow

./: .dockerignore  .env.default  .env.prod  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  justfile
cli/: Cargo.toml
cli/src/: dump.rs  eval.rs  export.rs  hacking.rs  import.rs  main.rs  migrate.rs  rpc.rs  shell.rs  terminal.rs  text.rs
cli/src/serve/: handlers.rs  jwt_auth.rs  mod.rs  route.rs  rpc.rs  state.rs  ws.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
examples/wasm/: Cargo.toml
examples/wasm/.cargo/: config.toml
examples/wasm/src/: lib.rs
libs/bon/: Cargo.toml
libs/bon/src/: compare.rs  dotted.rs  lib.rs  perms.rs  scour.rs  tagged.rs  tests.rs
libs/bon/src/perms/: mod.rs  tests.rs
libs/engine/: Cargo.toml
libs/engine/src/: domain.rs  identifiers.rs  internal.rs  lib.rs  memory.rs  notifications.rs  perform.rs  sequences.rs  session.rs  state.rs  storage.rs  users.rs
libs/engine/src/session/: internal.rs  logs.rs  mod.rs  state.rs
libs/kernel/: Cargo.toml
libs/kernel/src/: actions.rs  diags.rs  hooks.rs  lib.rs  perms.rs  plugins.rs  scopes.rs  session.rs  surround.rs  tests.rs
libs/kernel/src/model/: base.rs  builder.rs  compare.rs  entity.rs  entity_ref.rs  entry.rs  mod.rs  props.rs  scopes.rs
libs/kernel/src/plugins/: mod.rs  mw.rs
libs/kernel/src/snapshots/: kernel__tests__it_creates_expected_json_for_new_named.snap
libs/plugins/core/: Cargo.toml
libs/plugins/core/src/: build.rs  building.rs  carrying.rs  dynamic.rs  finding.rs  lib.rs  library.rs  looking.rs  moving.rs  tools.rs
libs/plugins/rpc/: Cargo.toml
libs/plugins/rpc/src/: async_tokio.rs  inproc.rs  lib.rs  proto.rs  sessions.rs
libs/plugins/rune/: Cargo.toml
libs/plugins/rune/src/: lib.rs  runner.rs  sources.rs
libs/plugins/wasm/: Cargo.toml  build.rs
libs/plugins/wasm/src/: lib.rs
libs/replies/: Cargo.toml
libs/replies/src/: lib.rs
libs/sqlite/: Cargo.toml
libs/sqlite/src/: lib.rs
libs/tests/: Cargo.toml
libs/tests/benches/: look.rs  simple.rs
libs/tests/src/: lib.rs  tests.rs
libs/tests/src/snapshots/: tests__tests__it_can_drop_held_container.snap  tests__tests__it_can_go_east.snap  tests__tests__it_can_rehold_dropped_container.snap  tests__tests__it_evaluates_a_simple_look.snap  tests__tests__it_evaluates_two_simple_looks_same_session.snap  tests__tests__it_evaluates_two_simple_looks_separate_session.snap
plugins/agent-sys/: Cargo.toml
plugins/agent-sys/src/: lib.rs
plugins/core/: Cargo.toml
plugins/core/src/: build.rs  building.rs  carrying.rs  chat.rs  emote.rs  fashion.rs  finding.rs  helping.rs  lib.rs  library.rs  location.rs  looking.rs  memory.rs  moving.rs  sched.rs  security.rs  tools.rs
plugins/core/src/building/: actions.rs  mod.rs  model.rs  parser.rs  tests.rs
plugins/core/src/carrying/: actions.rs  mod.rs  model.rs  parser.rs  tests.rs
plugins/core/src/chat/: mod.rs  tests.rs
plugins/core/src/fashion/: mod.rs  tests.rs
plugins/core/src/helping/: mod.rs  tests.rs
plugins/core/src/location/: actions.rs  mod.rs  model.rs  parser.rs  tests.rs
plugins/core/src/looking/: mod.rs  tests.rs
plugins/core/src/moving/: actions.rs  mod.rs  model.rs  parser.rs  tests.rs
plugins/core/src/security/: mod.rs
plugins/core/src/snapshots/: plugins_core__building__tests__it_describes_area.snap  plugins_core__building__tests__it_describes_area.snap.new  plugins_core__building__tests__it_edits_items_by_gid.snap  plugins_core__building__tests__it_edits_items_by_gid.snap.new  plugins_core__building__tests__it_edits_items_named.snap  plugins_core__building__tests__it_edits_items_named.snap.new  plugins_core__building__tests__it_edits_raw_items_named.snap  plugins_core__building__tests__it_edits_raw_items_named.snap.new  plugins_core__carrying__tests__it_fails_to_puts_item_in_non_containers.snap  plugins_core__carrying__tests__it_puts_items_in_containers.snap  plugins_core__carrying__tests__it_takes_items_out_of_containers.snap  plugins_core__helping__tests__it_allows_editing_default_help.snap  plugins_core__helping__tests__it_allows_editing_default_help.snap.new  plugins_core__helping__tests__it_allows_editing_help_by_name.snap  plugins_core__helping__tests__it_allows_editing_help_by_name.snap.new  plugins_core__helping__tests__it_reads_default_help_on_help.snap  plugins_core__helping__tests__it_reads_help_by_name.snap  plugins_core__looking__tests__it_fails_to_look_at_not_found_entities.snap  plugins_core__looking__tests__it_fails_to_look_inside_non_containers.snap  plugins_core__looking__tests__it_looks_at_entities.snap  plugins_core__looking__tests__it_looks_in_area_with_items_on_ground.snap  plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_a_route.snap  plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_holding_items.snap  plugins_core__looking__tests__it_looks_in_empty_area.snap  (+4 more)
plugins/dynlib/: Cargo.toml
plugins/dynlib-sys/: Cargo.toml
plugins/dynlib-sys/src/: lib.rs
plugins/dynlib/src/: lib.rs
plugins/rpc/: Cargo.toml
plugins/rpc-proto/: Cargo.toml
plugins/rpc-proto/src/: agent.rs  fsm.rs  lib.rs  server.rs
plugins/rpc/src/: async_tokio.rs  example.rs  inproc.rs  lib.rs  querying.rs  sessions.rs
plugins/rune/: Cargo.toml
plugins/rune/src/: actions.rs  lib.rs  module.rs  parser.rs  runner.rs  sources.rs  tests.rs
plugins/wasm/: Cargo.toml  build.rs
plugins/wasm-sys/: Cargo.toml
plugins/wasm-sys/src/: agent.rs  lib.rs  macros.rs
plugins/wasm/src/: lib.rs
yew/: Cargo.toml  index.html  index.scss
yew/src/: app.rs  command_line.rs  history.rs  home.rs  hooks.rs  list_errors.rs  login.rs  main.rs  open_web_socket.rs  routes.rs  text_input.rs  types.rs  user_context_provider.rs
yew/src/pages/: home.rs  login.rs  logout.rs  mod.rs  register.rs
yew/src/services/: mod.rs  web_socket.rs  websocket.rs
yew/src/shared/: command_line.rs  editor.rs  history.rs  history_items.rs  logout_button.rs  mod.rs  open_web_socket.rs  require_user.rs  text_input.rs  user_context_provider.rs
(+176 files in other folders)
