[workspace]
members = [
    "libs/replies",
    "libs/kernel",
    "libs/engine",
    "libs/sqlite",
    "plugins/core",
    "plugins/rune",
    "plugins/rpc",
    "plugins/wasm",
    "plugins/wasm-sys",
    "plugins/dynlib",
    "examples/shared",
    "examples/rpc",
    "examples/wasm",
    "libs/tests",
    "cli",
    "yew",
]
default-members = [ "cli" ]

[profile.release-wasm]
debug = false
inherits = "release"
lto = true
opt-level = 's'
panic = "abort"
strip = true
