[workspace]
members = [
    "libs/macros",
    "libs/replies",
    "libs/kernel",
    "libs/engine",
    "libs/sqlite",
    "libs/english",
    "plugins/core",
    "plugins/rune",
    "plugins/rpc-proto",
    "plugins/rpc",
    "plugins/agent-sys",
    "plugins/wasm",
    "plugins/wasm-sys",
    "plugins/dynlib",
    "plugins/dynlib-sys",
    "examples/shared",
    "examples/rpc",
    "examples/wasm",
    "libs/tests",
    "cli",
    "yew",
]
default-members = [ "cli" ]

[profile.release-wasm]
debug = false
inherits = "release"
lto = true
opt-level = 's'
panic = "abort"
strip = true
