[workspace]
resolver = "2"
members = [
    "libs/bon",
    "libs/macros",
    "libs/replies",
    "libs/kernel",
    "libs/engine",
    "libs/sqlite",
    "libs/english",
    "plugins/core",
    "plugins/rune",
    "plugins/rpc-proto",
    "plugins/rpc",
    "plugins/agent-sys",
    "plugins/dynlib",
    "plugins/dynlib-sys",
    "examples/shared",
    "libs/tests",
    "cli",
    "web",
]
default-members = ["cli"]
