[package]
name = "cli"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
color-backtrace = "0.5.1"
clap = { version = "4.0.13", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
futures = "0.3"
axum = { version = "0.5.16", features = ["ws", "headers", "json"] }
axum-typed-websockets = "0.4.0"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tera = "1.17.1"
rustyline = "10.0.0"
tempfile = "3.4.0"
 
[dependencies.replies]
path = "../libs/replies"

[dependencies.kernel]
path = "../libs/kernel"

[dependencies.engine]
path = "../libs/engine"

[dependencies.plugins-core]
path = "../libs/plugins/core"

[dependencies.plugins-rune]
path = "../libs/plugins/rune"

[dependencies.plugins-wasm]
path = "../libs/plugins/wasm"