[package]
name = "cli"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.28", features = ["full"] }
color-backtrace = "0.5.1"
clap = { version = "4.3.1", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
futures = "0.3"
axum = { version = "0.6.18", features = ["ws", "headers", "json"] }
axum-typed-websockets = "0.5.0"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tera = "1.19.0"
rustyline = "11.0.0"
tempfile = "3.5.0"
tracing-tree = "0.2.3"
 
[dependencies.replies]
path = "../libs/replies"

[dependencies.kernel]
path = "../libs/kernel"

[dependencies.engine]
path = "../libs/engine"

[dependencies.plugins-core]
path = "../libs/plugins/core"

[dependencies.plugins-rune]
path = "../libs/plugins/rune"

[dependencies.plugins-wasm]
path = "../libs/plugins/wasm"

[dependencies.plugins-rpc]
path = "../libs/plugins/rpc"
