[package]
name = "cli"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[dependencies.replies]
path = "../libs/replies"

[dependencies.kernel]
path = "../libs/kernel"

[dependencies.engine]
path = "../libs/engine"

[dependencies.sqlite]
path = "../libs/sqlite"

[dependencies.plugins-core]
path = "../plugins/core"

[dependencies.plugins-rune]
path = "../plugins/rune"

[dependencies.plugins-rpc]
path = "../plugins/rpc"

[dependencies.plugins-dynlib]
path = "../plugins/dynlib"

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.29", features = ["full"] }
color-backtrace = "0.5.1"
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
futures = "0.3"
axum = { version = "0.6.19", features = ["ws", "headers", "json"] }
axum-typed-websockets = "0.5.0"
tower-http = { version = "0.4.3", features = ["fs", "cors", "trace"] }
tera = "1.19.0"
rustyline = "11.0.0"
tempfile = "3.7.0"
tracing-tree = "0.2.4"
nanoid = "0.4.0"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
axum-extra = { version = "0.7.6", features = ["cookie"] }
argon2 = "0.5.1"
time = "0.3.25"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
base64 = "0.21.2"
