[package]
name = "yew"
version = "0.1.0"
edition = "2021"
# description = "Template for starting a Yew project using Trunk"
# readme = "README.md"
# repository = "https://github.com/yewstack/yew-trunk-minimal-template"
# license = "MIT OR Apache-2.0"
# keywords = ["yew", "trunk"]
# categories = ["gui", "wasm", "web-programming"]

[lib]
doctest = false

[dependencies.replies]
path = "../libs/replies"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
yew-router = "0.17.0"
yew-agent = "0.2.0"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
gloo-console = "0.2"
gloo-timers = "0.2.4"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
reqwasm = "0.5.0"
log = "0.4.17"
yewdux = "0.9.0"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
