[package]
name = "yew"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.replies]
path = "../libs/replies"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
yew-router = "0.17.0"
yew-agent = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
gloo = "0.8"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
reqwasm = "0.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
log = "0.4.19"
yewdux = "0.9.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
yew-hooks = "0.2.0"
anyhow = "1.0.72"
thiserror = "1.0.44"
futures-util = "0.3.28"
monaco = { git = "https://github.com/jlewallen/rust-monaco.git", features = [
    "yew-components",
    "yew",
] }
dotenv_codegen = "0.15.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "Document",
    "KeyboardEvent",
    "MouseEvent",
    "Url",
    "Worker",
    "Element",
    "Node",
    "Window",
    "HtmlCollection",
    "HtmlInputElement",
]
