[package]
name = "plugin-example-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.plugins-core]
path = "../../plugins/core"

[dependencies.plugins-dynlib]
path = "../../plugins/dynlib"

[dependencies.plugins-dynlib-sys]
path = "../../plugins/dynlib-sys"

[dependencies.plugins-rpc-proto]
path = "../../plugins/rpc-proto"

[dependencies]
tracing = "0.1.37"
bincode = { version = "2.0.0-rc", features = ["derive"] }