[package]
name = "plugin-example-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.macros]
path = "../../libs/macros"

[dependencies.plugins-core]
path = "../../plugins/core"

[dependencies.dynlib-sys]
path = "../../plugins/dynlib-sys"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
bincode = { version = "2.0.0-rc", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.99"
chrono = "0.4.26"
