[package]
name = "plugin-example-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.macros]
path = "../../libs/macros"

[dependencies.plugins-core]
path = "../../plugins/core"

[dependencies.dynlib-sys]
path = "../../plugins/dynlib-sys"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
chrono = "0.4.26"
