[package]
name = "plugin-example-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
bincode = { version = "2.0.0-rc", features = ["serde"] }
serde_json = "1.0.96"

[dependencies.wasm-sys]
path = "../../plugins/wasm-sys"

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../../plugins/core"
