[package]
name = "plugin-example-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.wasm-sys]
path = "../../plugins/wasm-sys"

[dependencies]
anyhow = "1.0.72"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
