[package]
name = "burrow-bon"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
treediff = { version = "4.0.2", features = ["with-serde-json"] }
thiserror = "1.0.44"
