[package]
name = "kernel"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.replies]
path = "../replies"

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
tracing = "0.1.37"
nom = "7.1.3"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
treediff = { version = "4.0.2", features = ["with-serde-json"] }
chrono = { version = "0.4.26", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ctor = "0.2.2"
