[package]
name = "replies"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.macros]
path = "../../libs/macros"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
