[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../kernel"

[dependencies.engine]
path = "../engine"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
treediff = { version = "4.0.2", features = ["with-serde-json"] }
rusqlite = "0.29.0"
nanoid = "0.4.0"

