[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../kernel"

[dependencies.engine]
path = "../engine"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
rusqlite = { version = "0.29.0", features = ["chrono"] }
nanoid = "0.4.0"
chrono = "0.4.26"
r2d2_sqlite = "0.22.0"
r2d2 = "0.8.10"

