[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../kernel"

[dependencies.engine]
path = "../engine"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1.37"
rusqlite = { version = "0.29.0", features = ["chrono"] }
nanoid = "0.4.0"
chrono = "0.4.26"
r2d2_sqlite = "0.22.0"
r2d2 = "0.8.10"
cron = "0.12.0"

