[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
serde_json = "1.0.96"

[dev-dependencies.replies]
path = "../replies"

[dev-dependencies.kernel]
path = "../kernel"

[dev-dependencies.engine]
path = "../engine"

[dev-dependencies.plugins-core]
path = "../plugins/core"

[dev-dependencies.plugins-rune]
path = "../plugins/rune"

[dev-dependencies.plugins-wasm]
path = "../plugins/wasm"

[dev-dependencies.plugins-rpc]
path = "../plugins/rpc"

[dev-dependencies]
ctor = "0.2.2"
insta = { version = "1.29.0", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }

