[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "look"
harness = false

[lib]
doctest = false

[dependencies]
anyhow = "1.0.71"
criterion-macro = "0.4.0"
pprof = { version = "0.12.0", features = ["criterion", "flamegraph"] }
serde_json = "1.0.96"
tempfile = "3.6.0"

[dependencies.kernel]
path = "../kernel"

[dependencies.engine]
path = "../engine"

[dependencies.replies]
path = "../replies"

[dependencies.sqlite]
path = "../sqlite"

[dependencies.plugins-core]
path = "../../plugins/core"

[dependencies.plugins-rune]
path = "../../plugins/rune"

[dependencies.plugins-wasm]
path = "../../plugins/wasm"

[dependencies.plugins-rpc]
path = "../../plugins/rpc"

[dependencies.plugins-dynlib]
path = "../../plugins/dynlib"

[dev-dependencies]
ctor = "0.2.2"
insta = { version = "1.29.0", features = ["json"] }
pprof = { version = "0.12.0", features = ["criterion", "flamegraph"] }
tokio = { version = "1.28.2", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports", "tokio"] }
criterion-macro = "0.4.0"
