[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "simple"
harness = false

[lib]
doctest = false

[dependencies]
anyhow = "1.0.72"
criterion-macro = "0.4.0"
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.104"
tempfile = "3.7.0"

[dependencies.kernel]
path = "../kernel"

[dependencies.engine]
path = "../engine"

[dependencies.replies]
path = "../replies"

[dependencies.sqlite]
path = "../sqlite"

[dependencies.plugins-core]
path = "../../plugins/core"

[dependencies.plugins-rune]
path = "../../plugins/rune"

[dependencies.plugins-rpc]
path = "../../plugins/rpc"

[dependencies.plugins-dynlib]
path = "../../plugins/dynlib"

[dev-dependencies]
ctor = "0.2.4"
insta = { version = "1.31.0", features = ["json"] }
pprof = { version = "0.12.1", features = ["criterion", "flamegraph"] }
criterion = { version = "0.5.1", features = ["html_reports", "tokio"] }
criterion-macro = "0.4.0"
