[package]
name = "plugins-agent-sys"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc-proto]
path = "../rpc-proto"

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies]
anyhow = "1.0.71"
serde_json = "1.0.99"
tracing = "0.1.37"
chrono = "0.4.26"