[package]
name = "agent-sys"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.burrow-bon]
path = "../../libs/bon"

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies.rpc-proto]
path = "../rpc-proto"

[dependencies]
anyhow = "1.0.72"
serde_json = "1.0.104"
tracing = "0.1.37"
chrono = "0.4.26"
