[package]
name = "plugins-core"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.macros]
path = "../../libs/macros"

[dependencies.kernel]
path = "../../libs/kernel"

# I believe this is only necessary for `build.rs`
[dependencies.engine]
path = "../../libs/engine"

[dependencies]
argon2 = "0.5.1"
anyhow = "1.0.72"
tracing = "0.1.37"
serde_json = "1.0.104"
nom = "7.1.3"
indefinite = "0.1.6"
inflection = "0.1.2"
thiserror = "1.0.44"
serde = { version = "1.0.180", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["std"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ctor = "0.2.4"
