[package]
name = "plugins-dynlib-sys"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.engine]
path = "../../libs/engine"

[dependencies.plugins-rpc]
path = "../rpc"

[dependencies.plugins-rpc-proto]
path = "../rpc-proto"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
bincode = { version = "2.0.0-rc", features = ["derive"] }
