[package]
name = "plugins-dynlib"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.engine]
path = "../../libs/engine"

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc]
path = "../rpc"

[dependencies.dynlib-sys]
path = "../dynlib-sys"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
libloading = "0.8.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
