[package]
name = "plugins-rpc-proto"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"