[package]
name = "rpc-proto"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
serde = { version = "1.0.180", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde_json = "1.0.104"
