[package]
name = "plugins-rpc"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc-proto]
path = "../rpc-proto"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"
bincode_derive = "2.0.0-rc.3"
tokio = { version = "1.28.2", features = ["full"] }
chrono = "0.4.26"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json"] }
ctor = "0.2.2"
