[package]
name = "plugins-rune"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rune = "0.12.3"
glob = "0.3.1"
rune-modules = { version = "0.12.3", features = ["rand", "time", "json"] }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json"] }
