[package]
name = "plugins-rune"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
rune = { git = "https://github.com/rune-rs/rune.git" }
glob = "0.3.1"
rune-modules = { git = "https://github.com/rune-rs/rune.git", features = [
    "rand",
    "time",
    "json",
] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml", "json"] }
