[package]
name = "wasm-sys"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc-proto]
path = "../rpc-proto"

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
bincode = { version = "2.0.0-rc", features = ["derive"] }
serde_json = "1.0.96"