[package]
name = "wasm-sys"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.agent-sys]
path = "../agent-sys"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde_json = "1.0.104"
