[package]
name = "plugins-wasm"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
doctest = false

[dependencies.kernel]
path = "../../libs/kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc]
path = "../rpc"

[dependencies.wasm-sys]
path = "../wasm-sys"

[dependencies]
anyhow = "1.0.72"
tracing = "0.1.37"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
glob = "0.3.1"
wasmer = "3.3.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml", "json"] }
