[package]
name = "plugins-core"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../kernel"

[dependencies.engine]
path = "../../engine"

[dependencies]
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ctor = "0.2.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
nom = "7.1.3"
indefinite = "0.1.6"
inflection = "0.1.2"
libloading = "0.8.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }
