[package]
name = "plugins-rpc"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies]
anyhow = "1.0.66"
tracing = "0.1.37"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
bincode = "1.3.3"
bincode_derive = "2.0.0-rc.3"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
insta = { version = "1.21.1", features = ["yaml", "json"] }
ctor = "0.2.0"