[package]
name = "plugins-wasm"
version = "0.1.0"
authors = ["Jacob Lewallen <jlewallen@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies.kernel]
path = "../../kernel"

[dependencies.plugins-core]
path = "../core"

[dependencies.plugins-rpc]
path = "../rpc"

[dependencies]
anyhow = "1.0.66"
tracing = "0.1.37"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
glob = "0.3.1"

[dev-dependencies]
insta = { version = "1.21.1", features = ["yaml", "json"] }
